# CyGen-AI

./: brain.py  main.py  pyproject.toml  reminder.json  todo.md
backend/: Brain.py  base.py  chat.py  realtime.py
eelfunc/: chat.py  image.py  search.py  sysops.py
features/: app_launcher.py  base.py  chat.py  image_manager.py  realtime.py  reminder.py  system.py
utils/: eelinterface.py  speech_manager.py  speech_recognition.py
web/: main.html
webui/: package.json
webui/src/routes/: +layout.svelte  +page.svelte
webui/src/routes/app/: +page.svelte
