[project]
name = "cygen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cohere>=5.15.0",
    "googlesearch-python>=1.3.0",
    "mtranslate>=1.8",
    "ollama>=0.4.8",
    "selenium>=3.21.0",
    "speechrecognition>=3.14.3",
    "webdriver-manager>=4.0.2",
]
