[project]
name = "cygen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cohere>=5.15.0",
    "eel>=0.18.1",
    "elevenlabs==1.58.1",
    "googlesearch-python>=1.3.0",
    "mtranslate>=1.8",
    "nara>=0.5",
    "ollama>=0.4.8",
    "opencv-python>=4.11.0.86",
    "pyaudio>=0.2.14",
    "selenium>=3.21.0",
    "speechrecognition>=3.14.3",
    "webdriver-manager>=4.0.2",
]
